// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for individual commenters when displayed on the review page 1`] = `
<div>
  <h2>
    Your response was submitted 
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    We will review all the submissions received for this consultation. Our response will be published on the website around the time the guidance is published.
  </p>
  <hr />
</div>
`;

exports[`should match snapshot for individual commenters when displayed on the submitted page 1`] = `
<div>
  <h2>
    Your response was submitted 
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        data-qa-sel="review-submitted-comments"
        href="/1/review"
      >
        Review your response
      </a>
    </li>
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    We will review all the submissions received for this consultation. Our response will be published on the website around the time the guidance is published.
  </p>
  <hr />
</div>
`;

exports[`should match snapshot for organisation commenter when displayed on the review page 1`] = `
<div>
  <h2>
    Your response was submitted 
    to My Org
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    My Org
     will review all the submissions received for this consultation.
  </p>
  <p>
    NICE's response to all the submissions received will be published on the website around the time the final guidance is published.
  </p>
  <hr />
</div>
`;

exports[`should match snapshot for organisation commenter when displayed on the submitted page 1`] = `
<div>
  <h2>
    Your response was submitted 
    to My Org
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        data-qa-sel="review-submitted-comments"
        href="/1/review"
      >
        Review your response
      </a>
    </li>
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    My Org
     will review all the submissions received for this consultation.
  </p>
  <p>
    NICE's response to all the submissions received will be published on the website around the time the final guidance is published.
  </p>
  <hr />
</div>
`;

exports[`should match snapshot for organisation lead when displayed on the review page with responses from their org 1`] = `
<div>
  <h2>
    Your response was submitted 
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
    <li>
      <a
        href="something/api/exportlead/1"
      >
        Download all responses from your organisation (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    We will review all the submissions received for this consultation. Our response will be published on the website around the time the guidance is published.
  </p>
  <hr />
</div>
`;

exports[`should match snapshot for organisation lead when displayed on the review page without any responses from their org 1`] = `
<div>
  <h2>
    Your response was submitted 
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    We will review all the submissions received for this consultation. Our response will be published on the website around the time the guidance is published.
  </p>
  <hr />
</div>
`;

exports[`should match snapshot for organisation lead when displayed on the submitted page 1`] = `
<div>
  <h2>
    Your response was submitted 
     on 
    <time
      datetime="1660032000000"
    >
      9 August 2022
    </time>
    .
  </h2>
  <ul
    class="list list--unstyled"
  >
    <li>
      <a
        data-qa-sel="review-submitted-comments"
        href="/1/review"
      >
        Review your response
      </a>
    </li>
    <li>
      <a
        href="something/api/exportexternal/1"
      >
        Download submitted response (Excel)
      </a>
    </li>
    <li>
      <a
        href="something/api/exportlead/1"
      >
        Download all responses from your organisation (Excel)
      </a>
    </li>
  </ul>
  <h2>
    What happens next?
  </h2>
  <p>
    We will review all the submissions received for this consultation. Our response will be published on the website around the time the guidance is published.
  </p>
  <hr />
</div>
`;
